--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background: #faf3ee;
 }
 
 header{
     height: 100vh;
     position: relative;
-    background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -52,7 +52,7 @@ header{
 .comingsoon{
     position: absolute;
     height: 500px;
-    z-index: 7;
+    z-index: 1;
     top: 60%;
     left:65%;
     transform: translate(-60%, -65%);
