--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,90 @@ header{
     opacity: 0;
 }
 
+.down {
+    z-index: 200;
+    top: 90vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    width: 30px;
+    height: 60px;
+    border-radius: 15px;
+    background: transparent;
+    border: 4px solid rgb(170, 170, 170);
+    overflow: hidden;
+}
+
+.down:before {
+    content: '';
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: rgba(255, 141, 48, 0.986);
+    left: 50%;
+    top: 10px;
+    transform: translate(-50%, 0);
+    animation: animate 1s linear infinite;
+}
+
+.down:after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    height: 15px;
+    border-radius: 50%;
+    background: rgba(255, 141, 48, 0.986);
+    left: 50%;
+    top: 5px;
+    transform: translate(-50%, 0);
+    border-radius: 3px;
+}
+
+.down:hover {
+    cursor: pointer;
+}
+
+@keyframes animate {
+    0% {
+        transform: translate(-50%, 20px);
+    }
+    80% {
+        transform: translate(-50%, 40px);
+    }
+    100% {
+        transform: translate(-50%, 60px);
+    }
+}
+
+
 @media screen and (max-width: 600px) {
+
+
+    
+    .down {
+        width: 25px;
+        height: 50px;
+        border-radius: 15px;
+        overflow: hidden;
+    }
+    .down:before {
+        width: 5px;
+        height: 5px;
+        top: 6px;
+        transform: translate(-50%, 0);
+    }
+    .down:after {
+        width: 4px;
+        height: 12px;
+        border-radius: 50%;
+        border-radius: 40px;
+    }
+
+
+
+
+
     .footlogo{
         top: 21%;
         left:7%;
