--- a/css/style.css
+++ b/css/style.css
@@ -59,67 +59,95 @@ header{
     opacity: 0;
 }
 
-.down {
-    z-index: 200;
-    top: 90vh;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.scrolldown{
+    z-index: 10;
     position: absolute;
+    bottom: 20px;
+    left: 50%;
     width: 30px;
-    height: 60px;
-    border-radius: 15px;
-    background: transparent;
-    border: 4px solid rgb(170, 170, 170);
-    overflow: hidden;
-}
-
-.down:before {
-    content: '';
-    position: absolute;
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    background: rgba(255, 141, 48, 0.986);
-    left: 50%;
-    top: 10px;
-    transform: translate(-50%, 0);
-    animation: animate 1s linear infinite;
-}
-
-.down:after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    height: 15px;
-    border-radius: 50%;
-    background: rgba(255, 141, 48, 0.986);
-    left: 50%;
-    top: 5px;
-    transform: translate(-50%, 0);
-    border-radius: 3px;
-}
-
-.down:hover {
-    cursor: pointer;
-}
-
-@keyframes animate {
-    0% {
-        transform: translate(-50%, 20px);
-    }
-    80% {
-        transform: translate(-50%, 40px);
-    }
-    100% {
-        transform: translate(-50%, 60px);
-    }
-}
-
-
-@media screen and (max-width: 600px) {
-
-
+    height: 30px;
+    transform: translateY(-20px) translateX(-50%) rotate(45deg);
     
+}
+
+.scrolldown span{
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-bottom: 2px solid grey;
+    border-right: 2px solid grey;
+    animation: animate 2s linear infinite;
+}
+
+.scrolldown span:nth-child(1){
+    transform: translate(0, 0);
+    animation-delay: 0.4s;
+}
+
+.scrolldown span:nth-child(2){
+    z-index: 11;
+    transform: translate(-15px, -15px);
+    animation-delay: 0.2s;
+}
+
+.scrolldown span:nth-child(3){
+    z-index: 12;
+    transform: translate(-30px, -30px);
+    animation-delay: 0s;
+}
+
+@-webkit-keyframes animate
+{
+    0%{
+        top: -5px;
+        left: -5px;
+        opacity: 0;
+    }
+    25%{
+        top: 0px;
+        left: 0px;
+        opacity: 1;
+    }
+    50%, 100%{
+        top: 5px;
+        left: 5px;
+        opacity: 0;
+    }
+
+}
+
+
+@media screen and (max-width: 600px) {  
+    .scrolldown{
+        width: 20px;
+        height: 20px;
+    }
+    
+    .scrolldown span{
+        border-bottom: 2px solid grey;
+        border-right: 2px solid grey;
+        animation: animate 2s linear infinite;
+    }
+    
+    .scrolldown span:nth-child(1){
+        transform: translate(0, 0);
+    }
+    
+    .scrolldown span:nth-child(2){
+        transform: translate(-10px, -10px);
+    }
+    
+    .scrolldown span:nth-child(3){
+        transform: translate(-20px, -20px);
+    }
+
+
+
+
     .down {
         width: 25px;
         height: 50px;
