--- a/css/style.css
+++ b/css/style.css
@@ -25,15 +25,15 @@ header{
 }
 
 .icons{
+    position: absolute;
     z-index: 20;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    position: absolute;
     font-size: 20px;
-    top: 10px;
-    right: 20px;
+    bottom: 10px;
+    right: 10px;
     transform: translateY(10px) translateX(-20px);
 }
 
@@ -212,10 +212,11 @@ header{
     }
 
     .icons{
-        font-size: 13px;
-        top: 5px;
-        right: 5px;
         flex-direction: column;
+        font-size: 13px;
+        bottom: 30px;
+        right: 10px;
+        transform: translateY(-30px) translateX(-10px);
     }
     
     .icons .fa{
@@ -314,20 +315,6 @@ header{
         height: 270px;
     }
 
-    .icons{
-        flex-direction: column;
-    }
-
-    #snackbar {
-        width: 150px;
-        margin-left: -75px;
-        text-align: center;
-        padding: 10px;
-        left: 50%;
-        top: 30px;
-        font-size: 13px;
-      }
-
 }
 
 /* For Tablets */
@@ -352,10 +339,6 @@ header{
     
     .comingsoon{
         height: 300px;
-    }
-
-    .icons{
-        flex-direction: column;
     }
 }
 
