--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ header{
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    padding: 0;
 }
 
 .icons{
@@ -32,9 +33,9 @@ header{
     align-items: center;
     flex-direction: row;
     font-size: 20px;
-    bottom: 10px;
+    bottom: 20px;
     right: 10px;
-    transform: translateY(10px) translateX(-20px);
+    transform: translateY(-20px) translateX(-20px);
 }
 
 .icons .fa{
@@ -43,7 +44,7 @@ header{
     padding: 20px;
     background-color: hsl(25, 100%, 61%);
     border-radius: 50%;
-    box-shadow: 5px 4px 10px  hsl(29, 88%, 76%);
+    box-shadow: 5px 4px 10px  hsl(29, 94%, 69%);
 }
 .icons .fa:hover{
     box-shadow: 0px 0px 0px hsl(29, 88%, 76%);
@@ -223,7 +224,7 @@ header{
     }
     
     .icons .fa{
-        margin: 5px;
+        margin: 10px;
         padding: 15px;
     }
 
